--- a/Viral/css/main.css
+++ b/Viral/css/main.css
@@ -87,46 +87,22 @@ table {
   overflow: hidden; }
 
 @font-face {
-  font-family: "Nunito";
+  font-family: "SF";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/Nunito-Regular.ttf") format("truetype"); }
+  src: url("../fonts/SFUIText-Regular.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/Nunito-Bold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 900;
-  src: url("../fonts/Nunito-ExtraBold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Bebas";
+  font-family: "SF";
   font-style: normal;
   font-weight: 300;
-  src: url("../fonts/BebasNeue Light.ttf") format("truetype"); }
+  src: url("../fonts/SFUIText-Light.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "Bebas";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/BebasNeue Regular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Bebas";
+  font-family: "SF";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/BebasNeue Book.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Bebas";
-  font-style: normal;
-  font-weight: 900;
-  src: url("../fonts/BebasNeue Bold.ttf") format("truetype"); }
+  src: url("../fonts/SFUIText-Bold.ttf") format("truetype"); }
 
 /*
     Flaticon icon font: Flaticon
@@ -312,7 +288,7 @@ html {
   overflow-x: hidden !important; }
 
 body {
-  font-family: "Nunito", sans-serif !important;
+  font-family: "SF", sans-serif !important;
   overflow-x: hidden; }
 
 * {
@@ -407,8 +383,14 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, 0%);
+      -ms-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
   width: 300px;
   height: 113px; }
+  #intro h2 {
+    margin-top: 30px;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 300; }
